fixed gap

--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -53,7 +53,7 @@ html {
   display: grid;
   grid-template-columns: 300px auto;
   grid-auto-rows: minmax(100px, auto);
-  grid-gap: 20px;
+  gap: 20px;
   grid-template-areas: 'header header' 'sidebar nav' 'sidebar articles' 'footer footer';
 }
 
